# cmspxltb-analysis

./: .dependencies  .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  INSTALL  Makefile  build_env.sh  cmake_install.cmake  cmake_uninstall.cmake
gbl/cpp/: CMakeLists.txt
gbl/cpp/cmake/: FindROOT.cmake  GBLConfig.cmake.in
gbl/cpp/examples/: example1.cpp
gbl/cpp/include/: GblPoint.h  GblTrajectory.h  VMatrix.h
gbl/cpp/src/: BorderedBandMatrix.cpp  GblData.cpp  GblPoint.cpp  GblTrajectory.cpp  VMatrix.cpp
gbl/fortran/: README
gbl/python/: README  gblfit.py  gblnum.py  gbltst.py  mille.py
gbl/python/doc/: api-objects.txt  class-tree.html  gblfit-module.html  gblfit-pysrc.html  gblfit.GblData-class.html  gblfit.GblPoint-class.html  gblfit.GblTrajectory-class.html  gblnum-module.html  gblnum-pysrc.html  gblnum.BorderedBandMatrix-class.html  gbltst-module.html  gbltst-pysrc.html  help.html  identifier-index.html  index.html  mille-module.html  mille-pysrc.html  mille.MilleRecord-class.html  module-tree.html  redirect.html  toc-everything.html  toc-gblfit-module.html  toc-gblnum-module.html  toc-gbltst-module.html  toc-mille-module.html  toc.html
include/: CMSPixelClusteringProcessor.h  CMSPixelDecoder.h  CMSPixelReader.h  EUTELESCOPE.h  EUTelAPIXClusteringProcessor.h  EUTelApplyAlignmentProcessor.h  EUTelClusteringProcessor.h  EUTelConvertCMSPixel.h  EUTelCorrelator.h  EUTelDUTHistograms.h  EUTelDafBase.h  EUTelDafFitter.h  EUTelDafTrackerSystem.h  EUTelFFClusterImpl.h  EUTelFitTuple.h  EUTelHistogramManager.h  EUTelHitMaker.h  EUTelMAPSdigi.h  EUTelMatrixDecoder.h  EUTelMille.h  EUTelNativeReader.h  EUTelPStream.h  EUTelPreAlignment.h  EUTelRunHeaderImpl.h  EUTelSparseCluster2Impl.hcc  EUTelSparseCluster2Impl.tcc  EUTelSparseClusterImpl.hcc  EUTelSparseClusterImpl.tcc  EUTelSparseData2Impl.hcc  EUTelSparseData2Impl.tcc  EUTelSparseDataImpl.hcc  EUTelSparseDataImpl.tcc  EUTelTestFitter.h  EUTelUtilityPrintEventNumber.h  EUTelVirtualCluster.h  EUTelX0Processor.h  TDSPixelsChargeMap.h
jobsub/: jobsub.py
src/: APIXFitter.cc  CMSPixelCalibrateEvent.cc  CMSPixelClusteringProcessor.cc  CMSPixelDecoder.cc  CMSPixelReader.cc  EUTelAPIXClusteringProcessor.cc  EUTelAPIXHistograms.cc  EUTelAPIXHotPixelKiller.cc  EUTelAPIXKalman.cc  EUTelAPIXSparsePixel.cc  EUTelAPIXTbTrackTuple.cc  EUTelAPIXTiming.cc  EUTelAnalysisCMSPixel.cc  EUTelApplyAlignmentProcessor.cc  EUTelAutoPedestalNoiseProcessor.cc  EUTelBrickedClusterImpl.cc  EUTelCalculateEtaProcessor.cc  EUTelClusterFilter.cc  EUTelClusteringProcessor.cc  EUTelConvertCMSPixel.cc  EUTelCorrelator.cc  EUTelDUTHistograms.cc  EUTelDafAlign.cc  EUTelDafBase.cc  EUTelDafEigenFitter.cc  EUTelDafFitter.cc  EUTelDafTrackerSystem.cc  EUTelEventViewer.cc  EUTelFFClusterImpl.cc  EUTelFitTuple.cc  EUTelGBLFitter.cc  EUTelHitMaker.cc  EUTelHotPixelKiller.cc  EUTelLineFit.cc  EUTelM26Timing.cc  EUTelMAPSdigi.cc  EUTelMatrixDecoder.cc  EUTelMille.cc  EUTelMimosa26Generator.cc  EUTelMultiLineFit.cc  (+15 more)
test/stattest/: g4tests-StatTest.r1852.tar
tools/pyroplot/: pyroplot.py
(+5 files in other folders)
